[package]
name = "markup"
version = "0.15.0+frk.1"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
edition = "2021"
description = "A blazing fast, type-safe template engine for Rust."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/markup"
homepage = "https://github.com/utkarshkukreti/markup.rs"
repository = "https://github.com/utkarshkukreti/markup.rs"
readme = "README.md"
keywords = ["template", "html", "markup", "pug", "haml"]
categories = ["template-engine"]

publish = ["elleci"]

[dependencies]
markup-proc-macro = { path = "../markup-proc-macro", version = "0.15.0" }
itoa = { version = "1", optional = true }
rust_decimal = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
time = { version = "0.3", optional = true }
